--- a/main/assets/css/modules/_about.sass
+++ b/main/assets/css/modules/_about.sass
@@ -86,8 +86,9 @@
 
     img
       position: absolute
-      bottom: -90px
-      right: -12px
+      bottom: 125px
+      right: -25px
+      width: 50%
 
   &--options
     display: flex
@@ -158,7 +159,7 @@
           left: 163px
 
       img
-        width: 315px
+        width: 50%
 
 @media (max-width: 600px)
 
