--- a/main/assets/css/modules/_register.sass
+++ b/main/assets/css/modules/_register.sass
@@ -63,17 +63,20 @@
     .information-name,
     .information-email,
     .information-phone,
-    .information-event
+    .information-message
       position: relative
       width: 60%
       height: 50px
       font-size: 30px
       font-weight: 300
       margin-top: 30px
-
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button 
+      -webkit-appearance: none
+      margin: 0
     input[type="text"],
     input[type="email"],
-    input[type="phone"],
+    input[type="number"],
     select
       width: 100%
       padding: 0 0 5px 0
@@ -111,7 +114,7 @@
       .information-name,
       .information-email,
       .information-phone,
-      .information-event
+      .information-message
         width: 90%
         height: 40px
         font-size: 30px
@@ -127,7 +130,7 @@
       .information-name,
       .information-email,
       .information-phone,
-      .information-event
+      .information-message
         width: 90%
         height: 30px
         font-size: 24px
